--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
     },
     "require": {
         "php": "~7.0",
-        "ext-spl": "*"
+        "ext-spl": "*",
+        "fig/event-dispatcher-util": "^1.1",
+        "psr/event-dispatcher": "^1.0"
     },
     "require-dev": {
         "codeception/codeception": "^2.5"
